Fix config env vars for latency buckets.

--- a/charts/apiping/values.yaml
+++ b/charts/apiping/values.yaml
@@ -115,8 +115,8 @@ configMapProperties:
   METRICS_ADDR: :3000
   METRICS_PATH: /metrics
   METRICS_NAMESPACE: ""
-  METRICS_BUCKETS_LATENCY: "0.000005, 0.00001, 0.000025, 0.00005, 0.0001, 0.00025, 0.0005, 0.001, 0.0025, 0.005, 0.01, 0.025, 0.05, 0.1"
-  METRICS_BUCKETS_LATENCY: "0.0001, 0.00025, 0.0005, 0.001, 0.0025, 0.005, 0.01, 0.025, 0.05, 0.1, 0.25, .5, 1"
+  METRICS_BUCKETS_LATENCY_SERVER: "0.000005, 0.00001, 0.000025, 0.00005, 0.0001, 0.00025, 0.0005, 0.001, 0.0025, 0.005, 0.01, 0.025, 0.05, 0.1"
+  METRICS_BUCKETS_LATENCY_CLIENT: "0.0001, 0.00025, 0.0005, 0.001, 0.0025, 0.005, 0.01, 0.025, 0.05, 0.1, 0.25, .5, 1"
   HEALTH_ADDR: :8888
   HEALTH_PATH: /health
   OTEL_TRACES_SAMPLER: parentbased_traceidratio
