--- a/charts/apiping/values.yaml
+++ b/charts/apiping/values.yaml
@@ -110,7 +110,6 @@ configMapProperties:
   ADDR: :8080
   ROUTE: /ping
   TARGETS: "[\"http://localhost:8080/ping\"]"
-  JAEGER_URL: http://jaeger-collector:14268/api/traces
   INTERVAL: 20s
   TIMEOUT: 15s
   METRICS_ADDR: :3000
@@ -125,3 +124,17 @@ configMapProperties:
   # pick one of OTEL_SERVICE_NAME or OTEL_RESOURCE_ATTRIBUTES
   #OTEL_SERVICE_NAME: mynamespace.apiping
   #OTEL_RESOURCE_ATTRIBUTES: 'service.name=mynamespace.apiping,key2=value2'
+  #
+  # Exporter configuration: https://opentelemetry.io/docs/concepts/sdk-configuration/otlp-exporter-configuration/
+  #
+  # Jaeger:
+  #EXPORTER=jaeger
+  #OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger-collector:14268
+  #
+  # OTLP gRPC:
+  #EXPORTER=otlp-grpc
+  #OTEL_EXPORTER_OTLP_ENDPOINT http://jaeger-collector:4317
+  #
+  # OTLP HTTP:
+  #EXPORTER: otlp-http
+  #OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger-collector:4318
