--- a/charts/apiping/values.yaml
+++ b/charts/apiping/values.yaml
@@ -125,16 +125,23 @@ configMapProperties:
   #OTEL_SERVICE_NAME: mynamespace.apiping
   #OTEL_RESOURCE_ATTRIBUTES: 'service.name=mynamespace.apiping,key2=value2'
   #
+  # General configuration: https://opentelemetry.io/docs/concepts/sdk-configuration/general-sdk-configuration/
   # Exporter configuration: https://opentelemetry.io/docs/concepts/sdk-configuration/otlp-exporter-configuration/
   #
   # Jaeger:
-  #EXPORTER: jaeger
-  #OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger-collector:14268
+  OTELCONFIG_EXPORTER: jaeger
+  OTEL_TRACES_EXPORTER: jaeger
+  OTEL_PROPAGATORS: b3multi
+  OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger-collector:14268
   #
   # OTLP gRPC:
-  #EXPORTER: otlp-grpc
-  #OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger-collector:4317
+  # OTELCONFIG_EXPORTER: grpc
+  # OTEL_TRACES_EXPORTER: otlp
+  # OTEL_PROPAGATORS: b3multi
+  # OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger-collector:4317
   #
   # OTLP HTTP:
-  #EXPORTER: otlp-http
-  #OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger-collector:4318
+  # OTELCONFIG_EXPORTER: http
+  # OTEL_TRACES_EXPORTER: otlp
+  # OTEL_PROPAGATORS: b3multi
+  # OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger-collector:4318
