--- a/charts/apiping/values.yaml
+++ b/charts/apiping/values.yaml
@@ -119,6 +119,7 @@ configMapProperties:
   METRICS_BUCKETS_LATENCY_CLIENT: "0.0001, 0.00025, 0.0005, 0.001, 0.0025, 0.005, 0.01, 0.025, 0.05, 0.1, 0.25, .5, 1"
   HEALTH_ADDR: :8888
   HEALTH_PATH: /health
+  OTEL_TRACE_ENABLE: "true"
   OTEL_TRACES_SAMPLER: parentbased_traceidratio
   OTEL_TRACES_SAMPLER_ARG: "0.01"
   # pick one of OTEL_SERVICE_NAME or OTEL_RESOURCE_ATTRIBUTES
