--- a/docker/Dockerfile.datadog
+++ b/docker/Dockerfile.datadog
@@ -11,10 +11,11 @@ RUN adduser -D -g '' appuser
 COPY ./cmd/ /tmp/app/cmd
 COPY go.* /tmp/app/
 WORKDIR /tmp/app
-RUN rm -f ./orchestrion.tool.go
+RUN go install github.com/DataDog/orchestrion@v1.3.1
+RUN orchestrion pin
 RUN go mod tidy
 RUN go env -w CGO_ENABLED=0
-RUN go build -o /tmp/apiping github.com/udhos/apiping/cmd/apiping
+RUN orchestrion go build -o /tmp/apiping github.com/udhos/apiping/cmd/apiping
 
 #
 # STEP 2 build a small image from alpine
