--- a/docker/Dockerfile.datadog
+++ b/docker/Dockerfile.datadog
@@ -1,6 +1,6 @@
 # STEP 1 build executable binary
 
-FROM golang:1.24.5-alpine3.22 AS builder
+FROM golang:1.25.4-alpine3.22 AS builder
 
 RUN apk update
 RUN apk add git
@@ -15,6 +15,8 @@ RUN go install github.com/DataDog/orchestrion@v1.6.1
 RUN orchestrion pin
 RUN go mod tidy
 RUN go env -w CGO_ENABLED=0
+ARG GOARCH
+RUN echo "Building for GOARCH=$GOARCH"
 RUN orchestrion go build -o /tmp/apiping github.com/udhos/apiping/cmd/apiping
 
 #
